--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,26 +1,36 @@
-aiohttp==3.9.1
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
 aiosignal==1.3.1
-aiosqlite==0.19.0
-async-timeout==4.0.3
-attrs==23.1.0
-bellows==0.37.2
-cffi==1.16.0
+aiosqlite==0.20.0
+async-timeout==5.0.0
+attrs==24.2.0
+bellows==0.42.0
+cffi==1.17.1
 click==8.1.7
 click-log==0.4.0
 coloredlogs==15.0.1
-crc==6.0.0
+crc==7.0.0
 crccheck==1.3.0
-cryptography==41.0.7
-frozenlist==1.4.0
+cryptography==43.0.3
+frozendict==2.4.6
+frozenlist==1.5.0
+gpiod==2.2.1
 humanfriendly==10.0
-idna==3.6
-multidict==6.0.4
+idna==3.10
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+multidict==6.1.0
+propcache==0.2.0
 pure-pcapy3==1.0.1
-pycparser==2.21
+pycparser==2.22
 pyserial==3.5
 pyserial-asyncio==0.6
-typing_extensions==4.9.0
-universal-silabs-flasher==0.0.15
-voluptuous==0.14.1
-yarl==1.9.4
-zigpy==0.60.1
+pyserial-asyncio-fast==0.14
+referencing==0.35.1
+rpds-py==0.20.1
+setuptools==75.3.0
+typing_extensions==4.12.2
+universal-silabs-flasher==0.0.26
+voluptuous==0.15.2
+yarl==1.17.1
+zigpy==0.71.0
